...
        android:layout_marginTop="@dimen/header_margin"
        android:text="@string/hello_world_new"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <EditText
            android:id="@+id/editTextUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/type_something"/>

    <Button
...
            android:text="@string/change_text"
            android:layout_gravity="center_horizontal"/>


    <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/activityChangeTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/open_activity_and_change_text"/>
</LinearLayout>

