/*
 * Copyright 2018, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.example.android.testing.espresso.BasicSample
import io.qameta.allure.android.rules.LogcatRule
import io.qameta.allure.android.rules.ScreenshotRule
import io.qameta.allure.android.rules.WindowHierarchyRule
import io.qameta.allure.android.runners.AllureAndroidJUnit4

import androidx.test.ext.junit.rules.activityScenarioRule
import android.app.Activity
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.launchActivity
import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.onData
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.example.android.testing.espresso.BasicSample.page.ListPage
import com.example.android.testing.espresso.BasicSample.page.MainPage
import com.example.android.testing.espresso.BasicSample.page.SecondPage
import com.google.common.base.Predicates.equalTo
import com.google.common.base.Predicates.instanceOf
import junit.runner.Version.id
import org.hamcrest.collection.IsArrayContaining.hasItemInArray
import org.hamcrest.collection.IsMapContaining.hasEntry
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.hamcrest.core.AllOf.allOf
import org.hamcrest.core.Is.`is`
import org.hamcrest.core.StringStartsWith.startsWith


/**
 * The kotlin equivalent to the ChangeTextBehaviorTest, that
 * showcases simple view matchers and actions like [ViewMatchers.withId],
 * [ViewActions.click] and [ViewActions.typeText], and ActivityScenarioRule
 *
 *
 * Note that there is no need to tell Espresso that a view is in a different [Activity].
 */
@RunWith(AllureAndroindJUnit4::class)
@LargeTest
class ChangeTextBehaviorKtTest {
    val operationSystem: String = "Android"
    val toastMessage: String = "Android selected"

    /**
     * Use [ActivityScenarioRule] to create and launch the activity under test before each test,
     * and close it after each test. This is a replacement for
     * [androidx.test.rule.ActivityTestRule].
     */
    @get:Rule var activityScenarioRule = activityScenarioRule<MainActivity>()


    @Test
    fun changeText_sameActivity() {

        // Type text and then press the button.
        val mainPage = MainPage()
        mainPage.typeText(STRING_TO_BE_TYPED)


        mainPage.clickChangeButton()

        // Check that the text was changed.
        mainPage.getTextChanged()
            .check(matches(withText(STRING_TO_BE_TYPED)))


        mainPage.typeText(NEW_STRING_TO_BE_TYPED)
        //mainPage.clickChangeButton()
        mainPage.newTextChanged()
            .check(matches(withText(NEW_STRING_TO_BE_TYPED)))
    }

    @Test
    fun changeText_newActivity() {
        // Type text and then press the button.
        //onView(withId(R.id.editTextUserInput)).perform(typeText(STRING_TO_BE_TYPED),
                //closeSoftKeyboard())
        val mainPage = MainPage()
        val secondPage = SecondPage()

        mainPage.typeText(STRING_TO_BE_TYPED)
        mainPage.clickActivityButton()
        //onView(withId(R.id.activityChangeTextBtn)).perform(click())

        // This view is in a different Activity, no need to tell Espresso.
        //onView(withId(R.id.show_text_view)).check(matches(withText(STRING_TO_BE_TYPED)))

        secondPage.showText().check(matches(withText(STRING_TO_BE_TYPED)))
        secondPage.clickListButton()

        val listPage = ListPage()
        listPage.checkView()

        @Test

        fun test() {
            step("first step")


        }




        //val dataInteraction = onData(allOf())
       // onData(allOf(`is`(instanceOf(String.javaClass)), startsWith(operationSystem))).perform(click())
       // val dataInt = onData(allOf(`is`(instanceOf(String::class.java))))
            //.perform(click())
        /*onData(withItemContent())
            .onChildView(withText(operationSystem))
            .perform(click())*/

        //onView(withText(toastMessage))
           // .inRoot(ToastMessage())
            //.check(matches(isDisplayed()))




    }
    @Test
    fun goToList() {

    }



    companion object {

        val STRING_TO_BE_TYPED = "Espresso"
        val NEW_STRING_TO_BE_TYPED = "Espresso New"
    }



}